cppcheck_report.txt
Exercise-1/tests/unitTestAnimal.cpp:16:1: error: syntax error [syntaxError]
TEST(MockCatTest,SleepingFunction) {
^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

